# aoc-2021

01/: Cargo.toml
01/src/: main.rs
02/: Cargo.toml
02/src/: main.rs
03/: Cargo.toml
03/src/: main.rs
04/: Cargo.toml
04/src/: main.rs
05/: Cargo.toml
05/src/: main.rs
06/: 06.py  Cargo.toml
06/src/: main.rs
07/: 07.py
08/: Cargo.toml
08/src/: main.rs
09/: 09.py
10/: Cargo.toml
10/src/: main.rs
11/: 11.py
12/: Cargo.toml
12/src/: main.rs
13/: Cargo.toml
13/src/: main.rs
14/: Cargo.toml
14/src/: main.rs
15/: Cargo.toml
15/src/: main.rs
16/: Cargo.toml
16/src/: main.rs
17/: Cargo.toml
17/src/: main.rs
18/: Cargo.toml
18/src/: main.rs
19/: 19.py
20/: 20.py
21/: Cargo.toml
21/src/: main.rs
22/: Cargo.toml
22/src/: main.rs
23/: Cargo.toml
23/src/: main.rs
24/: Cargo.toml
24/src/: main.rs
25/: Cargo.toml
25/src/: main.rs
input_parser/: Cargo.toml
input_parser/src/: lib.rs
