[package]
name = "day12"
version = "0.1.0"
authors = ["Florian Lercher <florian.lercher@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
input_parser = { path = "../input_parser" }
