[package]
name = "day18"
version = "0.1.0"
authors = ["Florian Lercher <florian.lercher@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
